infra/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraudshield-api
spec:
  selector:
    app: fraudshield-api
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
