infra/kubernetes/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraudshield-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: fraudshield.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fraudshield-api
                port:
                  number: 80
